<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regis1"
    tools:context=".Registro">

    <Button
        android:id="@+id/okID2"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif"
        android:text="@string/inicioSesionLabel"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <CheckBox
        android:id="@+id/idIndep"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="Uso personal"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <CheckBox
        android:id="@+id/idAlum"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="Alumno"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <CheckBox
        android:id="@+id/idDocen"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="Docente"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idIndep"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/idAlum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="Copernicus System"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/idEmail"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:background="#F0F0F3"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#2E2D2D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <EditText
        android:id="@+id/idPass"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:background="#F0F0F3"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#2E2D2D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/idNombre"
        android:layout_width="250dp"
        android:layout_height="33dp"
        android:background="#F0F0F3"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#2E2D2D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="Registro"
        android:textColor="#373737"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="54dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif"
        android:text="@string/usuarioLabel"
        android:textAlignment="textEnd"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="78dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif"
        android:text="@string/passwordLabel"
        android:textAlignment="textEnd"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idPass"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="50dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="Email"
        android:textAlignment="textEnd"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="42dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/morado" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/ragistrarLabel"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toEndOf="@+id/okID2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <EditText
        android:id="@+id/idTel"
        android:layout_width="211dp"
        android:layout_height="37dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#2E2D2D"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:text="Número celular"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idTel"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Fecha de nacimiento"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idFecha"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Únete a Copernicus System como:"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <RadioButton
        android:id="@+id/idMasculino"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif"
        android:text="Hombre"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idFemenino"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="54dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif"
        android:text="Sexo"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <RadioButton
        android:id="@+id/idFemenino"
        android:layout_width="77dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif"
        android:text="Mujer"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/idFecha"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="date"
        android:textColor="#2E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

</androidx.constraintlayout.widget.ConstraintLayout>